add efficient multi head attention * kqv in 1 step * batched mha instead of concat

--- a/src/gpt/gpt_dev.ipynb
+++ b/src/gpt/gpt_dev.ipynb
@@ -190,14 +190,11 @@
       "torch.Size([4, 8, 65]) tensor(5.0364, grad_fn=<NllLossBackward0>)\n",
       "4.174387269895637\n",
       "[\"\\nl-QYjt'CL?\", '\\nlcmEzyyf,O']\n",
-      "2.5289735794067383\n",
+      "2.593620538711548\n",
       "\n",
-      "T: f t by tit thodselegrt R:\n",
-      "Fo\n",
-      "\n",
-      "\n",
-      "r bunour ther w, wequghobatho s llops t t toras bd ily,\n",
-      "TEY ishwar\n"
+      "'-d hecuiNTha se J.eie bunthe ak.\n",
+      "LAt 'sca m; oivI rEG?\n",
+      "My ak se scaXz-Si?egrUNUCLcy m avanghtand d \n"
      ]
     }
    ],
@@ -244,7 +241,7 @@
     "\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "for i in range(15_000):\n",
+    "for i in range(5_000):\n",
     "    xb, yb = get_batch(train_data)\n",
     "    _, loss = bigram(xb, yb)\n",
     "\n",
@@ -609,10 +606,161 @@
    "metadata": {},
    "source": [
     "TODO:\n",
-    "* encoder-decoder models (GPT is decoder only)\n",
-    "* efficient Multi-Headed Attention\n",
     "* BPE tokenization\n",
-    "* GPT-2 repro"
+    "* GPT-2 repro\n",
+    "* encoder-decoder models (GPT is decoder only)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Efficient Multi-Headed Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 4, 12])\n",
+      "torch.Size([2, 4, 18])\n",
+      "torch.Size([2, 4, 6]) torch.Size([2, 4, 6]) torch.Size([2, 4, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# KQV in 1 step.\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "B,T,C = 2, 4, 12\n",
+    "x = torch.randint(0, 10, (B,T,C)).float()\n",
+    "print(x.shape)\n",
+    "\n",
+    "HEAD_SIZE = 6\n",
+    "\n",
+    "qkv_linear = nn.Linear(C, HEAD_SIZE * 3, bias=False)\n",
+    "qkv = qkv_linear(x)\n",
+    "print(qkv.shape)\n",
+    "\n",
+    "q, k, v = qkv.tensor_split(3, dim=-1)\n",
+    "print(q.shape, k.shape, v.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original\n",
+      "torch.Size([1, 4, 12])\n",
+      "tensor([[[5., 0., 8., 5., 8., 8., 6., 1., 5., 8., 1., 9.],\n",
+      "         [1., 1., 0., 2., 9., 1., 6., 0., 9., 6., 5., 3.],\n",
+      "         [0., 8., 5., 3., 4., 9., 8., 3., 4., 2., 4., 1.],\n",
+      "         [3., 2., 9., 8., 6., 3., 9., 4., 7., 1., 6., 4.]]])\n",
+      "\n",
+      "Batched\n",
+      "tensor([[[[5., 0., 8., 5., 8., 8.],\n",
+      "          [1., 1., 0., 2., 9., 1.],\n",
+      "          [0., 8., 5., 3., 4., 9.],\n",
+      "          [3., 2., 9., 8., 6., 3.]],\n",
+      "\n",
+      "         [[6., 1., 5., 8., 1., 9.],\n",
+      "          [6., 0., 9., 6., 5., 3.],\n",
+      "          [8., 3., 4., 2., 4., 1.],\n",
+      "          [9., 4., 7., 1., 6., 4.]]]])\n",
+      "torch.Size([1, 2, 4, 6])\n",
+      "\n",
+      "Unbatched\n",
+      "tensor([[[5., 0., 8., 5., 8., 8., 6., 1., 5., 8., 1., 9.],\n",
+      "         [1., 1., 0., 2., 9., 1., 6., 0., 9., 6., 5., 3.],\n",
+      "         [0., 8., 5., 3., 4., 9., 8., 3., 4., 2., 4., 1.],\n",
+      "         [3., 2., 9., 8., 6., 3., 9., 4., 7., 1., 6., 4.]]])\n",
+      "torch.Size([1, 4, 12])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Batching no concat.\n",
+    "B,T,C = 1, 4, 12\n",
+    "x = torch.randint(0, 10, (B,T,C)).float()\n",
+    "print(\"Original\")\n",
+    "print(x.shape)\n",
+    "print(x)\n",
+    "\n",
+    "# We want (B,T,C) -> (B,n_heads,T,head_size)\n",
+    "N_HEADS = 2\n",
+    "HEAD_SIZE = 6\n",
+    "\n",
+    "x = x.view(B, T, N_HEADS, HEAD_SIZE).transpose(1, 2)\n",
+    "print(\"\\nBatched\")\n",
+    "print(x)\n",
+    "print(x.shape)\n",
+    "\n",
+    "x = x.transpose(2, 1).contiguous().view(B,T,C)\n",
+    "print(\"\\nUnbatched\")\n",
+    "print(x)\n",
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 4, 24])\n",
+      "torch.Size([2, 4, 24])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, embed_dim, n_heads):\n",
+    "        super().__init__()\n",
+    "        self.n_heads = n_heads\n",
+    "        assert embed_dim % n_heads == 0, f\"{embed_dim=} must be a multiple of {n_heads=}\"\n",
+    "        self.head_size = embed_dim // n_heads\n",
+    "        self.qkv_linear = nn.Linear(self.head_size, self.head_size*3, bias=False)\n",
+    "        self.register_buffer(\n",
+    "            \"tril\", torch.triu(torch.ones(BLOCK_SIZE, BLOCK_SIZE, dtype=torch.bool), diagonal=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B,T,C = x.shape\n",
+    "        # Batch heads: (B,T,C) -> (B,n_heads,T,head_size).\n",
+    "        x = x.view(B, T, self.n_heads, self.head_size).transpose(1, 2)\n",
+    "\n",
+    "        qkv = self.qkv_linear(x)\n",
+    "        # Split QKV: (B,nh,T,hs*3) -> 3*(B,nh,T,hs).\n",
+    "        q, k, v = qkv.tensor_split(3, dim=-1)\n",
+    "\n",
+    "        wei = q @ k.transpose(-1, -2)\n",
+    "        wei.masked_fill_(self.tril[:T,:T], float(\"-inf\"))\n",
+    "        wei = F.softmax(wei / (self.head_size**0.5), dim=-1)\n",
+    "\n",
+    "        out = wei @ v\n",
+    "        # Unbatch heads: (B,nh,T,hs) -> (B,T,C).\n",
+    "        out = out.transpose(1,2).contiguous().view(B,T,C)\n",
+    "        return out\n",
+    "    \n",
+    "B,T,C = 2, 4, 24\n",
+    "x = torch.randn(B,T,C).float()\n",
+    "print(x.shape)\n",
+    "\n",
+    "mha = MultiHeadAttention(embed_dim=C, n_heads=8)\n",
+    "print(mha(x).shape)"
    ]
   }
  ],
